# grains

./: .gitignore  README.md  embedding.py  processed_documents.json  pyproject.toml  requirements.txt  streamlit_app.py  workflow.py
.github/workflows/: assistant.yml  deploy.yml  embedding.yml
assistant/: assistant.py  critic.txt  student.txt  writer.txt
conf/: curicculum-house-keeping-with-content.json  curicculum-house-keeping.json  curriculum-house-keeping.json
data/: mappings.json
data/j_out/: GenAI References 2023-07-14.md
data/mappings/: 1_s2_0_S0278431917308113_main_mappings_20250416_095151.json  Career_opportunities_in_the_hospitality_industry___Les_Roches_mappings_20250416_095703.json  The_future_of_hospitality_jobs_mappings_20250416_100337.json  w26579_mappings_20250325_122804.json  w26579_mappings_20250325_165945.json  w26579_mappings_20250325_223705.json  w26579_mappings_20250415_134346.json
data/md/: 1-s2.0-S0278431917308113-main.md  1. Hotel Operations and Management Author Bundelkhand University Jhansi.md  1186_e-book of Hotel_management_and_operations.md  15245651606.1Q1.md  1771058994_0.md  19. Service Quality and Hotel's Customer Satisfaction; An Empirical Evidence from Ethiopia (Article) Author Feven Abebe Tessera, Ibiwani Alisa Hussain, Noraini Ahmad.md  2. Chapter 1 - Hospitality Industry.md  3. Classification of Hotels Author Institute of Hotel Management Catering Technology and Applied Nutrition.md  3805.md  9. Customer Satisfaction in Hotel Services Author Joleen Bizi Mubiri.md  BBAATR_101_slm.md  Career Prospects In Hotel Management.md  Career opportunities in the hospitality industry - Les Roches.md  DHTM-106.md  HM-103.md  HM-202.md  Hotel Housekeeping Training Manual by Andrews.md  Hotel-concept-handbook-2020.md  HotelHousekeepingManualbyDrMohammadAlam.md  Housekeeping Management by Matt A. Casado.md  The future of hospitality jobs.md  document.md  hotel_housekeeping_tutorial.md  housekeeping-trainee-english-10.md  kece102.md  (+5 more)
docs/: architecture.drawio
langflow/: Flow.json  critic.py  student.py  writer.py
taxonomy/: main.py
vector_store/: embedding.py
(+38 files in other folders)
