[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["grpollak <pollakgeorg@gmail.com>"]
readme = "README.md"
packages = [{include = "grains", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
docling = "^2.15.1"
openai = "^1.60.2"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
