[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["grpollak <pollakgeorg@gmail.com>"]
readme = "README.md"
packages = [{include = "grains", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
docling = "^2.15.1"
openai = "^1.60.2"
tiktoken = "^0.8.0"
mistletoe = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pudb = "^2024.1.3"
boto3 = "^1.37.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
# Set line length to 120
line-length = 120
# Configure rules and settings
select = ["E", "F", "I"]

# Control spacing between classes
[tool.ruff.format]
line-ending = "auto"

# This specifically controls class spacing
[tool.ruff.lint.flake8-style]
# For Ruff 0.1.0+:
blank-lines-after-class = 1  # Only one blank line after class definitions
