[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["grpollak <pollakgeorg@gmail.com>"]
readme = "README.md"
packages = [{include = "grains", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
docling = "^2.15.1"
openai = "^1.83.0"
tiktoken = "^0.8.0"
mistletoe = "^1.4.0"
pydantic-ai = "^0.0.42"
mlflow = {version = ">=3.0.0rc0", allow-prereleases = true}


[tool.poetry.group.dev.dependencies]
pudb = "^2024.1.3"
ruff = "^0.11.4"
boto3 = "^1.38.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = ["E", "F", "I"]
# Control spacing between classes
[tool.ruff.format]
line-ending = "auto"
